@startuml Classes
'see:https://plantuml.com/fr/class-diagram

        class User {
            {field} email: string
            {field} password: string
            {field} createdDatetime: DateTimeInterface
            {field} roles: string
            {method} getRoles()
            {method} getAvatar()
        }

        class Avatar {
            {field} name: string
        }

        class Category {
            {field} name: string
            {field} slug: string
            {method} getTricks()
        }
        
        class Trick {
            {field} name: string
            {field} slug: string
            {field} description: string
            {field} createdDatetime: DateTimeInterface
            {method} getPictures()
            {method} getVideos()
            {method} getComments()
        }

        class Picture {
            {field} name: string
        }

        class Video {
            {field} url: string
        }

        class Comment {
            {field} createdDatetime: DateTimeInterface
            {field} message: string
            {method} getUser()
        }

        User "1" *-- "1" Avatar : composition
        User "1" -- "0..*" Trick

        Category "1" o-- "0..*" Trick : aggregation
        Trick "1" *-- "1..*" Picture : composition
        Trick "1" *-- "0..*" Video : composition
        Trick "1" *-- "0..*" Comment : composition

        Comment "1" *-- "1..*" User : composition
@enduml